// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders disabled helper 1`] = `
<Text
  style={
    Object {
      "backgroundColor": "transparent",
      "color": "black",
      "flex": 1,
      "fontSize": 12,
      "lineHeight": 16,
      "opacity": 1,
      "paddingVertical": 2,
      "textAlign": "left",
    }
  }
>
  helper
</Text>
`;

exports[`renders helper 1`] = `
<Text
  style={
    Object {
      "backgroundColor": "transparent",
      "color": "black",
      "flex": 1,
      "fontSize": 12,
      "lineHeight": 16,
      "opacity": 1,
      "paddingVertical": 2,
      "textAlign": "left",
    }
  }
>
  helper
</Text>
`;

exports[`renders helper with error 1`] = `
<Text
  style={
    Object {
      "backgroundColor": "transparent",
      "color": "red",
      "flex": 1,
      "fontSize": 12,
      "lineHeight": 16,
      "opacity": 1,
      "paddingVertical": 2,
      "textAlign": "left",
    }
  }
>
  helper
</Text>
`;
